2013-06-24  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/cattable.boot (squeezeList): Remove.
	(squeeze1): Likewise.
	* interp/daase.lisp (*COMPRESSVECTOR*): Likewise.
	(*COMPRESSVECTORLENGTH*): Likewise.
	(*COMPRESS-STREAM*): Likewise.
	(*COMPRESS-STREAM-STAMP*): Likewise.
	(COMPRESSOPEN): Remove.  Adjust callers.
	(unsqueezeCopy): Likewise.
	(WRITE-COMPRESS): Likewise.
	(SQUEEZE): Likewise.
	(UNSQUEEZE): Likewise.
	(MAKE-DATABASES): Do not write out compress.daase.
	* interp/database.boot (squeezeAll): Likewise.

2013-06-24  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/sys-constants.boot ($BuiltinAttributes): Remove
	finiteAggregate and shallowlyMutable.
	* interp/daase.lisp (WRITE-COMPRESS): Do not push strings.

2013-06-22  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* include/token.H (token::base_type): Renam from class_type.
	(token::value): Add unary, binary, and ternary overloads.
	* utils/sexpr.H (Sexpr::Token): Use token::value.  Clean up.

2013-06-22  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* include/SourceFile.H: New.

2013-06-21  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* include/FileMapping.H: New.

2013-06-21  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* include/dialect.H: New.
	* include/diagnostics.H: Likewise.
	* include/storage.H: Move from utils/.

2013-06-20  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* include/diagnostics.H: New.
	* io/std-streams.cc: Likewise.

2013-06-20  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* boot/scanner.boot (shoeToken): Allow inerts.
	* boot/ast.boot (bfInert): New.
	* boot/parser.boot (bpInert): New.
	(bpConstTok): Use it.

2013-06-18  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/compiler.boot (compHasFormat): Take a DB parameter.
	Adjust callers.
	* interp/define.boot (ICformat): Likewise.
	* interp/lisplib.boot (predicateBitIndex): Likewise.
	(predicateBitRef): Likewise.
	(transHasCode): Likewise.
